# Hugo-zijn-Glorieuze-Schaakmachine

./: .gitignore  CMakeLists.txt  todo.txt
src/: main.cc
src/Engine/: allocators.h  bitfield.cc  bitfield.h  engine.cc  engine.h  eval.cc  eval.h  gen-defs.h  movegen.cc  movegen.h  position.cc  position.h  transtable.cc  transtable.h  zobrist-hash.h
src/cli/: UCI.cc  UCI.h  cli-game.cc  cli-game.h  cli-utils.cc  cli-utils.h
tables/: Makefile  free_diagonals_lookup_table.txt  free_ray_lookup_table.txt  free_straights_lookup_table.txt  generate_tables  generate_tables.cc  weakly_blocked_diagonals_lookup_table.txt  weakly_blocked_ray_lookup_table.txt
unit-tests/: test-bitfield.cc  test-cli-utils.cc  test-engine.cc  test-eval.cc  test-movegen.cc  test-position.cc  test-transtable.cc  test-uci.cc  unit-tests.cc  unit-tests.h
